--- a/src/app/notificaciones/notificaciones.component.html
+++ b/src/app/notificaciones/notificaciones.component.html
@@ -13,8 +13,7 @@
                     <p>{{reporte.fechaRegistro}}</p>
                     <p>{{reporte.usuario_reportado}}</p>
 
-                    <button (click)="setBloqueo()">Bloquear usuario</button>
-                    <button>Cancelar</button>
+                    <button (click)="bloquearUsuario()">Bloquear usuario</button>
                 </div>
             </ng-container>
             
