fecha de reportes formateada

--- a/src/app/notificaciones/notificaciones.component.html
+++ b/src/app/notificaciones/notificaciones.component.html
@@ -11,7 +11,7 @@
                     <p>{{reporte.motivo}}</p>
                     <h2>{{reporte.comentario}}</h2>                    
                     <p>{{reporte.fechaRegistro}}</p>
-                    <p>{{reporte.usuario_reportado}}</p>
+                    <p>Id de usuario reportado: {{reporte.usuario_reportado}}</p>
 
                     <button (click)="bloquearUsuario()">Bloquear usuario</button>
                 </div>
