--- a/src/app/notificaciones/notificaciones.component.css
+++ b/src/app/notificaciones/notificaciones.component.css
@@ -15,9 +15,9 @@ body {
 }
 
 .contenedor {
-  height: 29rem;
+  height: 32rem;
   width: 85%;
-  padding: 2rem;
+  padding-left: 3rem;
   border-radius: 2rem;
   background-color: #dfdfdf;
   overflow-y: scroll;
@@ -25,10 +25,8 @@ body {
 
 .caja {
   display: flex;
-  /* flex-direction: column;*/
   justify-content: space-around;
-  align-items: center; 
-  
+  align-items: center;
   border-radius: 1rem;
   cursor: pointer;
   background-color: white;
@@ -36,4 +34,22 @@ body {
   height: auto;
   width: 90%;
   margin: 1rem;
+}
+
+/* .lista-superior{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+} */
+
+li{
+  list-style: none;
+}
+
+.bloqueo{
+  border-radius: 5px;
+  height: 2rem;
+  width: 7rem;
+  background-color: #cfb9ec;
+  border: none;
 }
