--- a/src/app/notificaciones/notificaciones.component.html
+++ b/src/app/notificaciones/notificaciones.component.html
@@ -7,13 +7,26 @@
         <div class="contenedor">
             <ng-container *ngFor="let reporte of reportes; let i = index" >
                 <div class="caja">
-                    <p>{{reporte.id}}</p>
-                    <p>{{reporte.motivo}}</p>
-                    <h2>{{reporte.comentario}}</h2>                    
-                    <p>{{reporte.fechaRegistro}}</p>
-                    <p>Id de usuario reportado: {{reporte.usuario_reportado}}</p>
+                        <div class="lista-superior">
+                            <ul>
+                                <li>Número de reporte: </li>
+                                <li>Motivo del reporte: </li>
+                                <li>Comentario: </li>
+                                <li>Fecha de reporte: </li>
+                                <li>Id de usuario reportado: </li>
+                            </ul>
+                        </div>
+                        <div class="lista-inferior">
+                            <ul>
+                                <li>{{reporte.id}}</li>
+                                <li>{{reporte.motivo}}</li>
+                                <li>{{reporte.comentario}}</li>
+                                <li>{{reporte.fechaRegistro}}</li>
+                                <li>{{reporte.usuario_reportado}}</li>
+                            </ul>
+                        </div>
 
-                    <button (click)="bloquearUsuario()">Bloquear usuario</button>
+                    <button (click)="bloquearUsuario()" class="bloqueo">Bloquear usuario</button>
                 </div>
             </ng-container>
             
