--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -13,9 +13,9 @@
         </div>
         <div class="right">
           <h2>Usuario</h2>
-          <p *ngIf="usuario">{{usuario}}</p>
+          <h2 *ngIf="usuario" class="usuario">{{usuario}}</h2>
           <h2>Contraseña</h2>
-          <p *ngIf="password">{{password}}</p>
+          <p *ngIf="password">{{passwordOculta}}</p>
           <!-- <button>Cambiar contraseña</button> -->
         </div>
       </div>
