--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -11,13 +11,19 @@
         <div class="left">
           <img src="../../assets/user.png" alt="User" id="icono">
         </div>
+        
         <div class="right">
           <h2>Usuario</h2>
           <h2 *ngIf="usuario" class="usuario">{{usuario}}</h2>
           <h2>Contraseña</h2>
           <p *ngIf="password">{{passwordOculta}}</p>
-          <!-- <button>Cambiar contraseña</button> -->
+          <ng-container *ngFor="let admin of admin; let i = index">
+            <h3>Nombre: {{admin.nombre}}</h3>
+            <h3>Apellidos: {{admin.apellidoPaterno}} {{admin.apellidoMaterno}}</h3>
+            <h3>Correo: {{admin.correo}}</h3>
+          </ng-container>
         </div>
+
       </div>
     </section>
   </body>
