--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,17 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panel</title>
-</head>
 <body>
     <app-nav></app-nav>
-
     <div class="screen-container">
-        <section class="seccion-mapa">
+        <section class="seccion-principal">
           <h2 id="titulo">Mapa</h2>
-            <div class="container-items">
+          <br>
+            <div class="contenedor1">
                 <div class="top-items">
                     <div class="map">
                         <app-map></app-map>
@@ -28,23 +21,22 @@
                         <div class="medium-card">
                             <h4>Total de usuarios activos</h4>
                             <p>{{ usuariosActivos }}</p>
-                          </div>
-                        </aside>
-                    </div>
-                    <div class="bottom-items">
-                        <div class="row-cards">
-                            <div class="small-card">
-                                <h4>Total de reportes</h4>
-                                <p>{{ totalReportes }}</p>
-                            </div>
-                            <div class="small-card">
-                                <h4>Estado con más reportes</h4>
-                                <p>{{ estadoConMasReportes }}</p>
-                            </div>
+                        </div>
+                    </aside>
+                </div>
+                <div class="bottom-items">
+                    <div class="row-cards">
+                        <div class="small-card">
+                            <h4>Total de reportes</h4>
+                            <p>{{ totalReportes }}</p>
+                        </div>
+                        <div class="small-card">
+                            <h4>Estado con más reportes</h4>
+                            <p>{{ estadoConMasReportes }}</p>
                         </div>
                     </div>
                 </div>
-            </section>
-        </div>
-    </body>
-    </html>
+            </div>
+        </section>
+    </div>
+</body>
