--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -1,34 +1,12 @@
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-}
-
 .screen-container {
   padding-right: 16rem;
 }
 
-#titulo {
-  color: #7d53b5;
-  font-size: 36px;
-  margin-left: 1.5rem;
-  margin-top: 0.5rem;
-  margin-bottom: 2rem;
-}
-
-.seccion-mapa {
-  position: relative;
-  left: 8rem;
-  padding-top: 2.5rem;
-}
-
-.container-items {
+.contenedor1 {
   height: 30rem;
-  width: 103%;
+  width: 105%;
   padding: 2rem;
-  border-radius: 2rem;
-  background-color: #dfdfdf;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
 }
@@ -48,7 +26,6 @@ body {
   height: 380px;
 }
 
-
 .small-card {
   background-color: #f9f9f9;
   padding: 12px;
@@ -56,7 +33,6 @@ body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   flex: 1;
 }
-
 
 .medium-card {
   background-color: #f9f9f9;
@@ -75,6 +51,7 @@ body {
 .small-card p, .medium-card p {
   font-size: 15px;
 }
+
 .column-cards {
   display: flex;
   flex-direction: column;
